Improved styling of <ul> in redactor. Ensured consistent spacing of <ul> and <ol> elements in redactor.

--- a/icekit/admin_tools/static/admin/css/icekit_dashboard.less
+++ b/icekit/admin_tools/static/admin/css/icekit_dashboard.less
@@ -665,3 +665,14 @@ input#id_tags {
 label + .redactor-box {
 	clear: both;
 }
+
+.redactor-layer {
+	ul,
+	ol {
+		padding-left: 0 !important;
+		margin-left: 24px !important;
+	}
+	ul li {
+		list-style: disc !important;
+	}
+}
